@@ -1,4 +1,5 @@
 version 0.99.5 - xx-Dec-2010
+. [NEW] Layer: Added gradient layer
 . [NEW] MenuItem: it also supports class methods
 . [NEW-MAC] Added Mac templates
 . [NEW-MAC] Added support for Fullscreen / window mode
@@ -11,6 +12,7 @@ version 0.99.5 - xx-Dec-2010
 . [FIX-MAC] Display Link thread: async images works as expected. Disabled by default.
 . [FIX-MAC] MacGLView: VSync is enabled when the view is loaded from the NIB
 . [TEST] Added Glyph Designer test case
+. [TEST] Added LayerGradient test
 . [TEST-MAC] Added cocos2d icon to Mac tests
 
  
